--- a/index.html
+++ b/index.html
@@ -14,173 +14,178 @@
   </head>
 
   <body data-spy="scroll" data-offset="0" data-target="#theMenu">
-    <div id="nav">
-      <nav>
-        <a href="#about">About</a>
-        <a href="#skill">Skill</a>
-        <a href="#works">Works</a>
-        <a href="#contact">Contact</a>
+    <header>
+      <nav class="header-link">
+        <div class="header-right">
+          <a href="#profile">Profile</a>
+          <a href="#skill">Skill</a>
+          <a href="#works">Works</a>
+          <a href="#contact">Contact</a>
+        </div>
       </nav>
-    </div>
+    </header>
 
-    <section id="home" name="home"></section>
-    <div id="headerwrap">
-      <div class="container">
-        <br />
-        <div class="row">
-          <h1>Ryunosuke Maeda</h1>
-          <br />
-          <h3>Web Engineer</h3>
-          <br />
-          <br />
-          <div class="col-lg-6 col-lg-offset-3"></div>
+    <section id="home" name="home">
+      <div class="top-wrapper">
+        <div class="header-name header-name-color">
+          <h1><span>ryunosuke0922</span></h1>
         </div>
       </div>
-    </div>
+    </section>
 
-    <section id="about" name="about"></section>
-    <div class="about">
-      <div class="container">
-        <div class="row">
-          <h3>ABOUT ME</h3>
-          <p class="centered">
-            <i class="icon icon-circle"></i><i class="icon icon-circle"></i
-            ><i class="icon icon-circle"></i>
-          </p>
+    <section id="about" name="about">
+      <div class="about">
+        <div class="container">
+          <div class="row">
+            <h3>ABOUT ME</h3>
+            <p class="centered">
+              <i class="icon icon-circle"></i><i class="icon icon-circle"></i
+              ><i class="icon icon-circle"></i>
+            </p>
 
-          <div class="col-lg-6 col-lg-offset-3">
-            <img src="./img/icon.jpg" />
-            <p>
-              前田 龍之介 Maeda Ryunosuke<br />
-              東京にてフリーランスのWebエンジニアをしています。<br />
-              遊技機の組み込み→SE→スマホアプリ開発→Web系と色々やっていました。<br />
-              ジョブホッパー気味。<br /><br />五匹の猫と暮らす、猫好き。
-            </p>
-            <p>
-              フリーランス Web/スマートフォンアプリ開発 <span>2018-08</span>
-            </p>
-            <p>
-              システム開発会社 プログラマー スマートフォンアプリ開発
-              <span>2018-01 - 2018-07</span>
-            </p>
-            <p>医療機器メーカー プログラマー <span>2017-10 - 2017-12</span></p>
-            <p>
-              ポリゴンマジック株式会社 プログラマー 遊技機の液晶開発
-              <span>2015-04 - 2017-09</span>
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <section id="skill" name="skill"></section>
-    <div class="skill">
-      <div class="container">
-        <div class="row">
-          <h3>SKILL</h3>
-          <p class="centered">
-            <i class="icon icon-circle"></i><i class="icon icon-circle"></i
-            ><i class="icon icon-circle"></i>
-          </p>
-
-          <div class="col-lg-6 col-lg-offset-3">
-            <h4>業務で使用した言語 / Framework</h4>
-            <p>
-              HTML/CSS | C | C++ | Java | PHP | JavaScript | Objective-C | Ruby
-              | VB.NET
-            </p>
-            <p>
-              Laravel | ReactNative | Ruby on Rails | jQuery | Vue.js | .NET
-              Framerowk
-            </p>
-          </div>
-          <div class="col-lg-6 col-lg-offset-3">
-            <h4>業務外(学生時代など)</h4>
-            <p>
-              C# | C | C++ | Python
-            </p>
-            <p>
-              Unity | DirectX
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <section id="works" name="works"></section>
-    <div class="works">
-      <div class="container">
-        <div class="row">
-          <h3>WORKS</h3>
-          <p class="centered">
-            <i class="icon icon-circle"></i><i class="icon icon-circle"></i
-            ><i class="icon icon-circle"></i>
-          </p>
-
-          <div class="col-lg-6 col-lg-offset-3">
-            <h4>フリーランス時代</h4>
-            <p>
-              Laravel | PHP<br />
-              業務改善Webアプリケーション
-              <span>3ヶ月</span>
-            </p>
-            <p>
-              iOS / Android | ReactNative | JavaScript<br />
-              イベントアプリ
-              <span>半年</span>
-            </p>
-            <p>
-              iOS / Android | ReactNative | JavaScript<br />
-              イベントアプリ
-              <span>1年</span>
-            </p>
-          </div>
-          <div class="col-lg-6 col-lg-offset-3">
-            <h4>会社員時代</h4>
-            <p>
-              iOS / Android | Objective-C / Java / C/C++<br />
-              パチンコ、パチスロのネイティブアプリ開発
-              <span>8ヶ月</span>
-            </p>
-            <p>
-              アニメ版権 | 独自基盤 | C/C++<br />
-              遊技機の液晶開発
-              <span>1年半</span>
-            </p>
-            <p>
-              オリジナル版権 | 独自基盤 | C/C++<br />
-              遊技機の液晶開発
-              <span>1年半</span>
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <section id="contact" name="contact"></section>
-    <div class="contact">
-      <div class="container">
-        <div class="row">
-          <h3>CONTACT</h3>
-          <p class="centered">
-            <i class="icon icon-circle"></i><i class="icon icon-circle"></i
-            ><i class="icon icon-circle"></i>
-          </p>
-
-          <div class="col-lg-6 col-lg-offset-3">
-            <a href="https://twitter.com/ryunosuke0922">
+            <div class="col-lg-6 col-lg-offset-3">
               <img src="./img/icon.jpg" />
-            </a>
-            <a href="https://twitter.com/ryunosuke0922"> <p>Twitter</p> </a>
-
-            <a href="https://qiita.com/ryunosuke0922"> <p>Qiita</p> </a>
-            <a href="https://www.instagram.com/_ryunosuke0922/">
-              <p>Instagram</p>
-            </a>
+              <p>
+                前田 龍之介 Maeda Ryunosuke<br />
+                東京でWebエンジニアをしています。Web系にきて1年ちょっとになります。<br />
+                遊技機の組み込み→SE→スマホアプリ開発→Web系と色々やっていました。<br />
+                ジョブホッパー気味。<br /><br />五匹の猫と暮らす、猫好き。
+              </p>
+              <p>
+                フリーランス Web/スマートフォンアプリ開発 <span>2018-08</span>
+              </p>
+              <p>
+                システム開発会社 プログラマー スマートフォンアプリ開発
+                <span>2018-01 - 2018-07</span>
+              </p>
+              <p>
+                医療機器メーカー プログラマー <span>2017-10 - 2017-12</span>
+              </p>
+              <p>
+                ポリゴンマジック株式会社 プログラマー 遊技機の液晶開発
+                <span>2015-04 - 2017-09</span>
+              </p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
+    </section>
+
+    <div class="about-low"></div>
+
+    <section id="skill" name="skill">
+      <div class="skill">
+        <div class="container">
+          <div class="row">
+            <h3>SKILL</h3>
+            <p class="centered">
+              <i class="icon icon-circle"></i><i class="icon icon-circle"></i
+              ><i class="icon icon-circle"></i>
+            </p>
+
+            <div class="col-lg-6 col-lg-offset-3">
+              <h4>業務で使用した言語 / Framework</h4>
+              <p>
+                HTML/CSS | C | C++ | Java | PHP | JavaScript | Objective-C |
+                Ruby | VB.NET
+              </p>
+              <p>
+                Laravel | ReactNative | Ruby on Rails | jQuery | Vue.js | .NET
+                Framerowk
+              </p>
+            </div>
+            <div class="col-lg-6 col-lg-offset-3">
+              <h4>業務外(学生時代など)</h4>
+              <p>
+                C# | C | C++ | Python
+              </p>
+              <p>
+                Unity | DirectX
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="works" name="works">
+      <div class="works">
+        <div class="container">
+          <div class="row">
+            <h3>WORKS</h3>
+            <p class="centered">
+              <i class="icon icon-circle"></i><i class="icon icon-circle"></i
+              ><i class="icon icon-circle"></i>
+            </p>
+
+            <div class="col-lg-6 col-lg-offset-3">
+              <h4>フリーランス時代</h4>
+              <p>
+                Laravel | PHP<br />
+                業務改善Webアプリケーション
+                <span>3ヶ月</span>
+              </p>
+              <p>
+                iOS / Android | ReactNative | JavaScript<br />
+                イベントアプリ
+                <span>半年</span>
+              </p>
+              <p>
+                iOS / Android | ReactNative | JavaScript<br />
+                イベントアプリ
+                <span>1年</span>
+              </p>
+            </div>
+            <div class="col-lg-6 col-lg-offset-3">
+              <h4>会社員時代</h4>
+              <p>
+                iOS / Android | Objective-C / Java / C/C++<br />
+                パチンコ、パチスロのネイティブアプリ開発
+                <span>8ヶ月</span>
+              </p>
+              <p>
+                アニメ版権 | 独自基盤 | C/C++<br />
+                遊技機の液晶開発
+                <span>1年半</span>
+              </p>
+              <p>
+                オリジナル版権 | 独自基盤 | C/C++<br />
+                遊技機の液晶開発
+                <span>1年半</span>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <div class="contact-up"></div>
+
+    <section id="contact" name="contact">
+      <div class="contact">
+        <div class="container">
+          <div class="row">
+            <h3>CONTACT</h3>
+            <p class="centered">
+              <i class="icon icon-circle"></i><i class="icon icon-circle"></i
+              ><i class="icon icon-circle"></i>
+            </p>
+
+            <div class="col-lg-6 col-lg-offset-3">
+              <a href="https://twitter.com/ryunosuke0922">
+                <img src="./img/icon.jpg" />
+              </a>
+              <a href="https://twitter.com/ryunosuke0922"> <p>Twitter</p> </a>
+
+              <a href="https://qiita.com/ryunosuke0922"> <p>Qiita</p> </a>
+              <a href="https://www.instagram.com/_ryunosuke0922/">
+                <p>Instagram</p>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <div id="copyrights">
       <div class="container">
